fix solution.ipynb : fixed orthogonal projection.

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -177,16 +177,20 @@
     "\n",
     "def ortogonalProjection(x_1, x_2, y):\n",
     "    \"\"\"\n",
+    "    Computes the orthogonal projection of y on the segment made up of the points x_1 and x_2.\n",
     "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
     "    arg3 y: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: newPoint. A tuple, the coordinates of the orthogonal projection on y on the segment [x_1,x_2]\n",
     "    \"\"\"\n",
-    "    newPoint = None\n",
+    "    # newPoint = None\n",
     "    \n",
     "    if x_1[0] == x_2[0] :\n",
     "        # First case : the line containing x_1 and x_2 is vertical\n",
     "        # Be careful ! If the ordinate is not in the segment then we have to change it.\n",
-    "        newPoint = (x_1[0],y[1])\n",
+    "        if (x_1[1] <= y[1] and y[1] <= x_2[1]) :\n",
+    "            newPoint = (x_1[0],y[1])\n",
+    "        else :\n",
+    "            newPoint = None\n",
     "        \n",
     "    elif pointBelongsToSegment(x_1, x_2, y): # y already belongs to the segemnt [x_1, x_2]\n",
     "        newPoint = y\n",
@@ -197,19 +201,19 @@
     "        b = x_1[1] - a * x_1[0]\n",
     "        # Now we know the line containing x_1 and x_2 has the equation y = a * x + b\n",
     "        # So a normal vector to this line is (a,-1)\n",
-    "        # This vector is directing the normal line passing by the point y and its equation is -x + a*y + c = 0 :\n",
+    "        # This vector is directing the normal line passing by the point y and its equation is - x - a * y + c = 0 :\n",
     "        # let's find c!\n",
     "        c = y[0] + a*y[1]\n",
     "        # Now the intersection point is the point (x,y) which verifies :\n",
     "        # a*x - y = -b\n",
-    "        # -x + a*y = -c\n",
-    "        mat = np.array([[a,-1],[-1,a]])\n",
-    "        # Not invertible if a = +- 1 : ???\n",
+    "        # -x - a*y = -c\n",
+    "        mat = np.array([[a,-1],[-1,-a]])\n",
     "        point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
     "        newPoint = (point[0],point[1])\n",
     "    \n",
-    "    ## express the line passing by x_1 and x_2\n",
-    "    ## line = (x_2[1]-x_1[1])/(x_2[0]-x_1[0])\n",
+    "    if (newPoint and (not pointBelongsToSegment(x_1,x_2,newPoint))) :\n",
+    "        newPoint = None\n",
+    "        \n",
     "    return newPoint\n",
     "                       \n",
     "def computeArea(x_1, x_2, y_1, y_2):               \n",
@@ -223,12 +227,12 @@
     "    # first triangle:\n",
     "    base = seg_length(x_1, y_2)\n",
     "    height = seg_length(x_2, ortogonalProjection(x_1, y_2, x_2))\n",
-    "    area += 2*areaRightTriangle(base, height)\n",
+    "    area += areaRightTriangle(base, height)\n",
     "    \n",
     "    # second triangle:\n",
     "    base = seg_length(x_1, y_2)\n",
     "    height =  seg_length(y_1, ortogonalProjection(x_1, y_2, y_1))\n",
-    "    area += 2*areaRightTriangle(base, height)\n",
+    "    area += areaRightTriangle(base, height)\n",
     "\n",
     "    return area\n",
     "\n",
@@ -264,36 +268,6 @@
     "\n",
     "    return True"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.625"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "theo = [(0,x) for x in range(5)]\n",
-    "expe = [(1,x) for x in range(5)]\n",
-    "\n",
-    "trajectoryError(theo, expe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
