fix: advancements made on trajectoryerror

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +70,20 @@
     "                # we're outside of the subsegment\n",
     "                i += 1 # advance along the theoretical path       \n",
     "            else:\n",
+    "                # compute orthogonal projections:\n",
+    "                ortproj1 =  ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j])\n",
+    "                ortproj2 =  ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j+1])\n",
+    "                \n",
     "                # Before the intersection:\n",
-    "                # the points form the right triangle -> ort1, intersectPoint, coordExp[j]  \n",
-    "                base = seg_length(coordExp[j], intersectPoint)\n",
-    "                height =  seg_length(coordTh[i], ortogonalProjection(coordExp[j], intersectPoint, coordTh[i]))\n",
+    "                # the points form the right triangle -> coordExp[j], ortproj(coordExp[j]), intersection\n",
+    "                base = seg_length(ortproj1, intersectPoint)\n",
+    "                height =  seg_length(coordExp[j], ortproj1)\n",
     "                area += areaRightTriangle(base, height)\n",
     "                \n",
     "                # After the intersection:\n",
-    "                # the points form the right triangle -> intersectPoint, coordth[i+1], coordexp[i+1]\n",
-    "                base = seg_length(coordExp[j+1], intersectPoint)\n",
-    "                height =  seg_length(coordTh[i+1], ortogonalProjection(coordExp[j+1], intersectPoint, coordTh[i]))\n",
+    "                # the points form the right triangle -> intersectPoint, coordExp[j+1], ortproj(coordExp[j+1])\n",
+    "                base = seg_length(intersectPoint, ortproj2)\n",
+    "                height =  seg_length(coordExp[j+1], ortproj2)\n",
     "                area += areaRightTriangle(base, height)\n",
     "                \n",
     "                j += 1 # advance along the experimental path  \n",
@@ -268,6 +272,13 @@
     "\n",
     "    return True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
