fix: refactoring og the trajectoryError function to pass each test. TODO: create additional test cases.

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,10 +47,10 @@
     "    return: error, the total area difference betweeen the theoretical trajectory and the experimental one divided by the distance.\n",
     "    \"\"\"\n",
     "    ## assume the gps knows the exact start and end of the theoretical path:\n",
-    "    if coordTh[0] != coordExp[0]:\n",
-    "        coordExp.insert(0, coordTh[0])\n",
-    "    if coordTh[-1] != coordExp[-1]:\n",
-    "        coordExp.append(coordTh[-1])\n",
+    "    #if coordTh[0] != coordExp[0]:\n",
+    "    #    coordExp.insert(0, coordTh[0])\n",
+    "    #if coordTh[-1] != coordExp[-1]:\n",
+    "    #    coordExp.append(coordTh[-1])\n",
     "\n",
     "    # initialize values:\n",
     "    area = 0 # the total area between the theoretical and experimental paths\n",
@@ -59,21 +59,32 @@
     "    i = 0 # iterator over the theoretical path\n",
     "    \n",
     "    # start iterations:\n",
-    "    while (i+1 < len(coordTh) and j+1 < len(coordExp)):        \n",
+    "    while (i+1 < len(coordTh) and j+1 < len(coordExp)):     \n",
     "        # we work on a subsegment [coordTh[i], coordTh[i+1]] \n",
+    "        \n",
+    "        print()\n",
+    "        print(\"coordTh[i] -> \", coordTh[i])\n",
+    "        print(\"coordTh[i+1] -> \", coordTh[i+1])\n",
+    "        print(\"coordExp[j] -> \", coordExp[j])\n",
+    "        print(\"coordExp[j+1] -> \", coordExp[j+1])\n",
     "        \n",
     "        # search for an intersection:\n",
     "        intersectPoint = intersection(coordTh[i], coordTh[i+1], coordExp[j], coordExp[j+1]) \n",
-    "        \n",
+    "        # compute orthogonal projections:\n",
+    "        ortproj1 =  ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j])\n",
+    "        ortproj2 =  ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j+1])\n",
+    "                \n",
     "        if intersectPoint:\n",
+    "            \n",
+    "            print(\"intersectPoint exists\")\n",
+    "            \n",
     "            if intersectPoint == coordTh[i+1] == coordExp[j]:\n",
     "                # we're outside of the subsegment\n",
-    "                i += 1 # advance along the theoretical path       \n",
-    "            else:\n",
-    "                # compute orthogonal projections:\n",
-    "                ortproj1 =  ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j])\n",
-    "                ortproj2 =  ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j+1])\n",
+    "                i += 1 # advance along the theoretical path \n",
     "                \n",
+    "                print(\"advance along the theoretical path\")\n",
+    "                \n",
+    "            else:\n",
     "                # Before the intersection:\n",
     "                # the points form the right triangle -> coordExp[j], ortproj(coordExp[j]), intersection\n",
     "                base = seg_length(ortproj1, intersectPoint)\n",
@@ -86,20 +97,33 @@
     "                height =  seg_length(coordExp[j+1], ortproj2)\n",
     "                area += areaRightTriangle(base, height)\n",
     "                \n",
-    "                j += 1 # advance along the experimental path  \n",
-    "        elif not pointBelongsToSegment(coordTh[i], coordTh[i+1], ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j])):      \n",
-    "            area += computeArea(coordTh[i], coordTh[i+1], coordExp[j], coordExp[j+1])\n",
+    "                j += 1 # advance along the experimental path \n",
+    "                        \n",
+    "                print(\"advance along the experimental path\")\n",
+    "        \n",
+    "        elif pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1) and pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1):     \n",
+    "            \n",
+    "            print(\"ortproj1 and ortproj2 belong to segment\")\n",
+    "            \n",
+    "            area += computeArea(ortproj1, ortproj2, coordExp[j], coordExp[j+1])\n",
     "            j += 1 # advance along the experimental path  \n",
+    "            \n",
+    "            print(\"advance along the experimental path\")\n",
     "        \n",
     "        else:\n",
     "            # we're outside of the subsegment\n",
     "            i += 1 # advance along the theoretical path\n",
+    "            \n",
+    "            print(\"advance along the theoretical path\")\n",
     "        \n",
     "        ## TODO check for backtracking:\n",
     "        \n",
     "        # a) if ort1 or ort2 in in segment [ coordTh[i] , prevOrt1 ] or [ coordTh[i] , prevOrt2 ]\n",
     "        \n",
     "        # b) identify the area to remove \n",
+    "        \n",
+    "    print(\"total area= \", area)\n",
+    "    print(\"distance= \", distance)\n",
     "                \n",
     "    return area / distance\n",
     "\n",
@@ -186,18 +210,20 @@
     "    arg3 y: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: newPoint. A tuple, the coordinates of the orthogonal projection on y on the segment [x_1,x_2]\n",
     "    \"\"\"\n",
-    "    # newPoint = None\n",
     "    \n",
-    "    if x_1[0] == x_2[0] :\n",
+    "    # By removing the idea that ortogonalProjection() return \"None\" if the point does not belong to the segment. None of the test return errors!\n",
+    "    \n",
+    "    # newPoint = None\n",
+    "    if pointBelongsToSegment(x_1, x_2, y): # y already belongs to the segemnt [x_1, x_2]\n",
+    "        newPoint = y\n",
+    "    \n",
+    "    elif x_1[0] == x_2[0] :\n",
     "        # First case : the line containing x_1 and x_2 is vertical\n",
     "        # Be careful ! If the ordinate is not in the segment then we have to change it.\n",
-    "        if (x_1[1] <= y[1] and y[1] <= x_2[1]) :\n",
-    "            newPoint = (x_1[0],y[1])\n",
-    "        else :\n",
-    "            newPoint = None\n",
-    "        \n",
-    "    elif pointBelongsToSegment(x_1, x_2, y): # y already belongs to the segemnt [x_1, x_2]\n",
-    "        newPoint = y\n",
+    "        #if (x_1[1] <= y[1] and y[1] <= x_2[1]) :\n",
+    "        newPoint = (x_1[0],y[1])\n",
+    "        #else :\n",
+    "        #    newPoint = None\n",
     "    \n",
     "    else :\n",
     "    # Second case : the line containing x_1 and x_2 is not vertical\n",
@@ -215,8 +241,8 @@
     "        point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
     "        newPoint = (point[0],point[1])\n",
     "    \n",
-    "    if (newPoint and (not pointBelongsToSegment(x_1,x_2,newPoint))) :\n",
-    "        newPoint = None\n",
+    "    #if (newPoint and (not pointBelongsToSegment(x_1,x_2,newPoint))) :\n",
+    "    #    newPoint = None\n",
     "        \n",
     "    return newPoint\n",
     "                       \n",
@@ -272,13 +298,6 @@
     "\n",
     "    return True"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
