fix(test.ipynb): Refactored some tests to take into accound the modification made to orthogonalProjection. Refactored some tests to work with float numbers using numpy.testing.assert_almost_equal

--- a/test.ipynb
+++ b/test.ipynb
@@ -117,28 +117,18 @@
     "    expectedResult = oracle.readline()\n",
     "    error = oracle.readline()\n",
     "    # process the strings\n",
-    "    theoreticalXAxis = [int(x) for x in theoreticalXAxis.split(\",\")]\n",
-    "    theoreticalYAxis = [int(x) for x in theoreticalYAxis.split(\",\")]\n",
+    "    theoreticalXAxis = [float(x) for x in theoreticalXAxis.split(\",\")]\n",
+    "    theoreticalYAxis = [float(x) for x in theoreticalYAxis.split(\",\")]\n",
+    "    experimentalXAxis = [float(x) for x in experimentalXAxis.split(\",\")]\n",
+    "    experimentalYAxis = [float(x) for x in experimentalYAxis.split(\",\")]\n",
     "    for i in range(len(theoreticalXAxis)):\n",
     "        theoreticalPath.append((theoreticalXAxis[i],theoreticalYAxis[i]))\n",
     "    for i in range(len(experimentalXAxis)):\n",
     "        experimentalPath.append((experimentalXAxis[i],experimentalYAxis[i]))\n",
     "    expectedResult = parseNumeral(expectedResult)\n",
-    "    error = parseNumeral(error)\n",
+    "    error = float(error)\n",
     "    # returns\n",
     "    return theoreticalPath, experimentalPath, expectedResult, error\n",
-    "    \n",
-    "def parseNumeral(strValue):\n",
-    "    \"\"\"\n",
-    "    Transforms a string value to the appropriate numeral type.\n",
-    "    \n",
-    "    arg1: strValue. A string, a numerical value.\n",
-    "    return: An int or a float, The value.\n",
-    "    \"\"\"\n",
-    "    #try:\n",
-    "    #    return int(strValue)\n",
-    "    #except ValueError:\n",
-    "    return float(strValue)\n",
     "    \n",
     "def performOracleTest(oracleFile):\n",
     "    \"\"\"\n",
@@ -154,7 +144,7 @@
     "    myResults = sl.trajectoryError(theoreticalPath, experimentalPath)\n",
     "    \n",
     "    # step 3: compare test results:\n",
-    "    if myResults in range(expectedResult-error, expectedResult+error):\n",
+    "    if myResults > expectedResult-error and myResults < expectedResult+error:\n",
     "        ## test successfull\n",
     "        print(\"Success\")\n",
     "    else:\n",
@@ -182,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,8 +201,9 @@
     "        expe = [(1,x) for x in range(5)]\n",
     "        #displ(theo,expe)\n",
     "        \n",
-    "        self.assertEqual(1, sl.trajectoryError(theo, expe))# Difference expected : (area = 4 )/ (length = 4) = 1\n",
-    "\n",
+    "        #self.assertEqual(1, sl.trajectoryError(theo, expe))# Difference expected : (area = 4 )/ (length = 4) = 1\n",
+    "        np.testing.assert_almost_equal(1, sl.trajectoryError(theo, expe), 5)\n",
+    "        \n",
     "    def test_straightCrossing(self): # -> Test 4\n",
     "        theo = [(0,0),(0,1)]\n",
     "        expe = [(1,0),(-1,1)]\n",
@@ -225,8 +216,9 @@
     "        expe = [(0,0)] + [(x,1) for x in range(6)] + [(5,0)]\n",
     "        #displ(theo,expe)\n",
     "        \n",
-    "        self.assertEqual(1, sl.trajectoryError(theo, expe))# Difference expected : 1\n",
-    "\n",
+    "        #self.assertEqual(1, sl.trajectoryError(theo, expe))# Difference expected : 1\n",
+    "        np.testing.assert_almost_equal(1, sl.trajectoryError(theo, expe), 5)\n",
+    "        \n",
     "    def test_differentLengthCrossing(self): # -> Test 6\n",
     "        theo = [(0,0),(0,2)]\n",
     "        expe = [(0,0),(1,0),(-1,1),(1,2),(0,2)]\n",
@@ -252,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +370,7 @@
     "        segA_2 = (0,2)\n",
     "        y = (-1,-1)\n",
     "        \n",
-    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
+    "        self.assertEqual((0,-1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "\n",
     "    def test_projectionOnVerticalLineFromRight(self):\n",
     "        segA_1 = (0,0)\n",
@@ -420,26 +412,26 @@
     "        segA_2 = (0,1)\n",
     "        y = (0,2)\n",
     "        \n",
-    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
+    "        self.assertEqual((0,2), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "        \n",
     "    def test_verticallyAlignedUnderSegment(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,1)\n",
     "        y = (0,-1)\n",
     "        \n",
-    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
+    "        self.assertEqual((0,-1), sl.ortogonalProjection(segA_1, segA_2, y))\n",
     "    \n",
     "    def test_diagonallyAlignedAboveSegment(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (1,1)\n",
     "        y = (2,2)\n",
     "        \n",
-    "        self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))"
+    "        self.assertEqual((2,2), sl.ortogonalProjection(segA_1, segA_2, y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +489,8 @@
     "        segB_1 = (1,0)\n",
     "        segB_2 = (2,1)\n",
     "        \n",
-    "        self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+    "        np.testing.assert_almost_equal(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2), 5)\n",
+    "        #self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
     "    def test_trapezium_simplest_negative(self):\n",
     "        segA_1 = (0,0)\n",
@@ -505,7 +498,8 @@
     "        segB_1 = (-1,0)\n",
     "        segB_2 = (-2,-1)\n",
     "        \n",
-    "        self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
+    "        np.testing.assert_almost_equal(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2), 5)\n",
+    "        #self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
     "        \n",
     "    def test_trapezium_negative_positive(self):\n",
     "        segA_1 = (-1,-1)\n",
@@ -542,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,14 +644,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      ".............FF....FF..........FFFFFF.......F.....F."
+      "...............................F..FFF..............."
      ]
     },
     {
@@ -883,66 +877,18 @@
      "text": [
       "\n",
       "======================================================================\n",
-      "FAIL: test_diagonallyAlignedAboveSegment (__main__.TestOrthoProjection)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-18-6d7b5711baef>\", line 67, in test_diagonallyAlignedAboveSegment\n",
-      "    self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
-      "AssertionError: None != (2.0, 2.0)\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_projectionNotInSegment (__main__.TestOrthoProjection)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-18-6d7b5711baef>\", line 11, in test_projectionNotInSegment\n",
-      "    self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
-      "AssertionError: None != (0, -1)\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_verticallyAlignedAboveSegment (__main__.TestOrthoProjection)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-18-6d7b5711baef>\", line 53, in test_verticallyAlignedAboveSegment\n",
-      "    self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
-      "AssertionError: None != (0, 2)\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_verticallyAlignedUnderSegment (__main__.TestOrthoProjection)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-18-6d7b5711baef>\", line 60, in test_verticallyAlignedUnderSegment\n",
-      "    self.assertEqual(None, sl.ortogonalProjection(segA_1, segA_2, y))\n",
-      "AssertionError: None != (0, -1)\n",
-      "\n",
-      "======================================================================\n",
       "FAIL: test_trapezium_negative_positive (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-19-288d2411a107>\", line 71, in test_trapezium_negative_positive\n",
+      "  File \"<ipython-input-48-1c756e8dad46>\", line 73, in test_trapezium_negative_positive\n",
       "    self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 5 != 6.0\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_trapezium_simplest (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-19-288d2411a107>\", line 55, in test_trapezium_simplest\n",
-      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 1.5 != 1.5000000000000002\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_trapezium_simplest_negative (__main__.TestComputeArea)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-19-288d2411a107>\", line 63, in test_trapezium_simplest_negative\n",
-      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
-      "AssertionError: 1.5 != 1.5000000000000002\n",
       "\n",
       "======================================================================\n",
       "FAIL: test_triangle (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-19-288d2411a107>\", line 31, in test_triangle\n",
+      "  File \"<ipython-input-48-1c756e8dad46>\", line 31, in test_triangle\n",
       "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 2 != 1.0000000000000002\n",
       "\n",
@@ -950,7 +896,7 @@
       "FAIL: test_triangle_another_order (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-19-288d2411a107>\", line 47, in test_triangle_another_order\n",
+      "  File \"<ipython-input-48-1c756e8dad46>\", line 47, in test_triangle_another_order\n",
       "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 2 != 0.0\n",
       "\n",
@@ -958,39 +904,23 @@
       "FAIL: test_triangle_different_order (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-19-288d2411a107>\", line 39, in test_triangle_different_order\n",
+      "  File \"<ipython-input-48-1c756e8dad46>\", line 39, in test_triangle_different_order\n",
       "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 2 != 1.0000000000000002\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: test_differentLength (__main__.TestTrajectoryError)\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-15-18ccc97c5273>\", line 40, in test_differentLength\n",
-      "    self.assertEqual(1, sl.trajectoryError(theo, expe))# Difference expected : 1\n",
-      "AssertionError: 1 != 1.0000000000000002\n",
+      "Ran 52 tests in 0.068s\n",
       "\n",
-      "======================================================================\n",
-      "FAIL: test_straightParallel (__main__.TestTrajectoryError)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-15-18ccc97c5273>\", line 26, in test_straightParallel\n",
-      "    self.assertEqual(1, sl.trajectoryError(theo, expe))# Difference expected : (area = 4 )/ (length = 4) = 1\n",
-      "AssertionError: 1 != 1.0000000000000002\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 52 tests in 0.063s\n",
-      "\n",
-      "FAILED (failures=12)\n"
+      "FAILED (failures=4)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=52 errors=0 failures=12>"
+       "<unittest.runner.TextTestResult run=52 errors=0 failures=4>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,6 +941,13 @@
     "runner = unittest.TextTestRunner()\n",
     "runner.run(myTestSuite)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
