fix(test.ipynb): refactoring of the oracle parser

--- a/test.ipynb
+++ b/test.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
     "        theoreticalPath.append((theoreticalXAxis[i],theoreticalYAxis[i]))\n",
     "    for i in range(len(experimentalXAxis)):\n",
     "        experimentalPath.append((experimentalXAxis[i],experimentalYAxis[i]))\n",
-    "    expectedResult = parseNumeral(expectedResult)\n",
+    "    expectedResult = float(expectedResult)\n",
     "    error = float(error)\n",
     "    # returns\n",
     "    return theoreticalPath, experimentalPath, expectedResult, error\n",
@@ -151,12 +151,12 @@
     "        ## test failed\n",
     "        print(\"Failure\")\n",
     "    # display\n",
-    "    displ(theo,expe)"
+    "    displ(theoreticalPath,experimentalPath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
       "FAIL: test_trapezium_negative_positive (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-48-1c756e8dad46>\", line 73, in test_trapezium_negative_positive\n",
+      "  File \"<ipython-input-38-1c756e8dad46>\", line 73, in test_trapezium_negative_positive\n",
       "    self.assertEqual(5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 5 != 6.0\n",
       "\n",
@@ -888,7 +888,7 @@
       "FAIL: test_triangle (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-48-1c756e8dad46>\", line 31, in test_triangle\n",
+      "  File \"<ipython-input-38-1c756e8dad46>\", line 31, in test_triangle\n",
       "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 2 != 1.0000000000000002\n",
       "\n",
@@ -896,7 +896,7 @@
       "FAIL: test_triangle_another_order (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-48-1c756e8dad46>\", line 47, in test_triangle_another_order\n",
+      "  File \"<ipython-input-38-1c756e8dad46>\", line 47, in test_triangle_another_order\n",
       "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 2 != 0.0\n",
       "\n",
@@ -904,12 +904,12 @@
       "FAIL: test_triangle_different_order (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-48-1c756e8dad46>\", line 39, in test_triangle_different_order\n",
+      "  File \"<ipython-input-38-1c756e8dad46>\", line 39, in test_triangle_different_order\n",
       "    self.assertEqual(2, sl.computeArea(segA_1, segA_2, segB_1, segB_2))\n",
       "AssertionError: 2 != 1.0000000000000002\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 52 tests in 0.068s\n",
+      "Ran 52 tests in 0.125s\n",
       "\n",
       "FAILED (failures=4)\n"
      ]
@@ -920,7 +920,7 @@
        "<unittest.runner.TextTestResult run=52 errors=0 failures=4>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,13 +941,6 @@
     "runner = unittest.TextTestRunner()\n",
     "runner.run(myTestSuite)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
