fix: refactored trajectoryError

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +46,6 @@
     "    arg2 coordExp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
     "    return: error, the total area difference betweeen the theoretical trajectory and the experimental one divided by the distance.\n",
     "    \"\"\"\n",
-    "    ## assume the gps knows the exact start and end of the theoretical path:\n",
-    "    #if coordTh[0] != coordExp[0]:\n",
-    "    #    coordExp.insert(0, coordTh[0])\n",
-    "    #if coordTh[-1] != coordExp[-1]:\n",
-    "    #    coordExp.append(coordTh[-1])\n",
-    "\n",
     "    # initialize values:\n",
     "    area = 0 # the total area between the theoretical and experimental paths\n",
     "    distance = path_length(coordTh) # total theoretical path length\n",
@@ -76,15 +70,13 @@
     "                \n",
     "        if intersectPoint:\n",
     "            \n",
-    "            print(\"intersectPoint exists\")\n",
-    "            \n",
     "            if intersectPoint == coordTh[i+1] == coordExp[j]:\n",
     "                # we're outside of the subsegment\n",
     "                i += 1 # advance along the theoretical path \n",
     "                \n",
     "                print(\"advance along the theoretical path\")\n",
     "                \n",
-    "            else:\n",
+    "            elif pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1) and pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1):\n",
     "                # Before the intersection:\n",
     "                # the points form the right triangle -> coordExp[j], ortproj(coordExp[j]), intersection\n",
     "                base = seg_length(ortproj1, intersectPoint)\n",
@@ -100,10 +92,25 @@
     "                j += 1 # advance along the experimental path \n",
     "                        \n",
     "                print(\"advance along the experimental path\")\n",
-    "        \n",
-    "        elif pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1) and pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1):     \n",
     "            \n",
-    "            print(\"ortproj1 and ortproj2 belong to segment\")\n",
+    "            else:\n",
+    "                # Before the intersection:\n",
+    "                # the points form the right triangle -> coordExp[j], ortproj(coordExp[j]), intersection\n",
+    "                base = seg_length(coordExp[j], intersectPoint)\n",
+    "                height =  seg_length(coordTh[i], ortogonalProjection(coordExp[j], intersectPoint, coordTh[i]))\n",
+    "                area += areaRightTriangle(base, height)\n",
+    "                \n",
+    "                # After the intersection:\n",
+    "                # the points form the right triangle -> intersectPoint, coordExp[j+1], ortproj(coordExp[j+1])\n",
+    "                base = seg_length(intersectPoint, coordExp[j+1])\n",
+    "                height =  seg_length(coordTh[i+1], ortogonalProjection(coordExp[j+1], intersectPoint, coordTh[i+1]))\n",
+    "                area += areaRightTriangle(base, height)\n",
+    "                \n",
+    "                j += 1 # advance along the experimental path \n",
+    "                        \n",
+    "                print(\"advance along the experimental path\")\n",
+    "                \n",
+    "        elif pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1) and pointBelongsToSegment(coordTh[i], coordTh[i+1], ortproj1):     \n",
     "            \n",
     "            area += computeArea(ortproj1, ortproj2, coordExp[j], coordExp[j+1])\n",
     "            j += 1 # advance along the experimental path  \n",
@@ -298,6 +305,13 @@
     "\n",
     "    return True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
