--- a/Objects.ipynb
+++ b/Objects.ipynb
@@ -92,15 +92,15 @@
     "        \"\"\"\n",
     "        return((self.p1).distance(self.p2))\n",
     "    \n",
-    "    def pathLength(path):\n",
+    "    def path_length(path):\n",
     "        \"\"\"\n",
     "        arg1 path : a table of Points\n",
     "        return totalLength : a float, the total length of the path made of the sequence of Points in //path//\n",
     "        \"\"\"\n",
     "        totalLength = 0\n",
     "        for i in range(len(path)-1)\n",
-    "            totalLength += Segment(path[i],path[i+1]).length\n",
-    "        return totalLength\n",
+    "            total_length += Segment(path[i],path[i+1]).length\n",
+    "        return total_length\n",
     "    \n",
     "    def intersection(self,other):\n",
     "        \"\"\"\n",
@@ -152,17 +152,17 @@
     "\n",
     "        return(intersect)\n",
     "    \n",
-    "    def orthogonalProjection(self,point):\n",
+    "    def orthogonal_projection(self,point):\n",
     "        \"\"\"\n",
     "        arg1 point : a Point.\n",
     "        return : a Point, the orthogonal projection of point onto self.\n",
     "        \"\"\"\n",
     "        if self.p1.x == self.p2.x :\n",
     "            # First case : the line containing x_1 and x_2 is vertical\n",
-    "            newPoint = (self.p1.x,point.y)\n",
+    "            new_point = (self.p1.x,point.y)\n",
     "\n",
-    "        elif self.pointBelongsToSegment(point): # point belongs to the segment \n",
-    "            newPoint = y\n",
+    "        elif self.point_belongs_to_segment(point): # point belongs to the segment \n",
+    "            new_point = y\n",
     "\n",
     "        else :\n",
     "        # Second case : the line containing x_1 and x_2 is not vertical\n",
@@ -179,14 +179,14 @@
     "            mat = np.array([[a,-1],[-1,a]])\n",
     "            # Not invertible if a = +- 1 ie b = -a * c\n",
     "            point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
-    "            newPoint = (point[0],point[1])\n",
+    "            new_point = (point[0],point[1])\n",
     "\n",
     "        ## express the line passing by x_1 and x_2\n",
     "        ## line = (self.p2.y-self.p1.y)/(self.p2.x-self.p1.x)\n",
     "\n",
-    "        return newPoint\n",
+    "        return new_point\n",
     "    \n",
-    "    def pointBelongsToSegment(self,point):\n",
+    "    def point_belongs_to_segment(self,point):\n",
     "        \"\"\"\n",
     "        arg1 point : A Point\n",
     "        return: A boolean, True if point belongs to the segment. False otherwise.\n",
@@ -201,8 +201,8 @@
     "        if dotproduct < 0:\n",
     "            return False\n",
     "\n",
-    "        squaredSegmentLength = seg_length(x_1,x_2)**2\n",
-    "        if dotproduct > squaredSegmentLength:\n",
+    "        squared_segment_length = seg_length(x_1,x_2)**2\n",
+    "        if dotproduct > squared_segment_length:\n",
     "            return False\n",
     "\n",
     "        return True\n",
